# server/pkg/gateways/rest/chat/chat.go
@@ -12,4 +12,5 @@ func Setup(r *gin.RouterGroup, cases usecase.Cases) {
 
 	g.GET("/:id", GetChatByID(cases.Chat))
 	g.GET("/", GetChats(cases.Chat))
+	g.POST("/:id/join", JoinChat(cases.Chat))
 }
