# server/pkg/gateways/rest/chat/get_chats.go
@@ -18,6 +18,7 @@ import (
 // @Success 200 {object} []domain.Chat "Chats data"
 // @Failure 400 "Bad Request"
 // @Failure 500 "Internal Server Error"
+// @Security ApiKeyAuth
 // @Router /chats [get]
 func GetChats(chatCase *usecase.Chat) gin.HandlerFunc {
 	return func(c *gin.Context) {
